--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "task-manager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node-sass assets/scss/main.scss assets/css/main.css -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/musayazlik/task-manager.git"
-  },
-  "keywords": [
-    "task",
-    "manager"
-  ],
-  "author": "Musa Yazlık",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/musayazlik/task-manager/issues"
-  },
-  "homepage": "https://github.com/musayazlik/task-manager#readme",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "bootstrap": "^5.1.3"
-  },
-  "devDependencies": {
-    "node-sass": "^6.0.1"
-  }
+   "name": "task-manager",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "node-sass assets/scss/main.scss assets/css/main.css -w"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/musayazlik/task-manager.git"
+   },
+   "keywords": [
+      "task",
+      "manager"
+   ],
+   "author": "Musa Yazlık",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/musayazlik/task-manager/issues"
+   },
+   "homepage": "https://github.com/musayazlik/task-manager#readme",
+   "dependencies": {
+      "@fortawesome/fontawesome-free": "^5.15.4",
+      "bootstrap": "^5.1.3",
+      "daterangepicker": "^3.1.0",
+      "jquery": "^3.6.0"
+   },
+   "devDependencies": {
+      "node-sass": "^6.0.1"
+   }
 }
